# kr326lib

./: .gitignore  .readthedocs.yaml  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
docs/source/: api.rst  conf.py  index.rst
include/: chem.hpp
src/: bindings.cpp  chem.cpp
stubs/: kr326lib.pyi
