[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kr326lib"
version = "1.0.0"
description = "Numerical Library By Kai Ruth (ETH Zurich, Imperial)"
readme = "README.md"
authors = [{ name = "Kai Ruth", email = "contact@kairuth.ch" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
]
keywords = ["numerical", "process-engineering", "C++", "chemistry"]
dependencies = [
]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = ["black", "bumpver", "isort", "pip-tools", "pytest"]

[project.urls]
Homepage = "https://github.com/Kai360-dot/kr326lib"

# [project.scripts]
# realpython = "reader.__main__:main"
