[build-system]
requires      = ["scikit-build-core>=0.10", "pybind11>=2.12", "pybind11-stubgen>=2.5"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
# Require the same CMake floor as CMakeLists.txt; scikit-build-core provisions
# cmake/ninja into the isolated build env if they are missing.
cmake.version = ">=3.15"
wheel.license-files = ["LICENSE"]

[project]
name = "kr326lib"
version = "1.0.0"
description = "Numerical Library By Kai Ruth (ETH Zurich, Imperial)"
readme = "README.md"
authors = [{ name = "Kai Ruth", email = "contact@kairuth.ch" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
]
keywords = ["numerical", "process-engineering", "C++", "chemistry"]
dependencies = [
]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = ["black", "bumpver", "isort", "pip-tools", "pybind11-stubgen", "pytest"]

[project.urls]
Homepage = "https://github.com/Kai360-dot/kr326lib"

# [project.scripts]
# realpython = "reader.__main__:main"
